ADDED SOME MORE PORTION TO MENU PAGE

--- a/index.html
+++ b/index.html
@@ -118,6 +118,59 @@
             <h1 class="title">Have Any Question?</h1>
             <button class="btncnt">CONTACT US<span>&#10230;</span></button>
         </div>
-        </section>      
+        </section>  
+        <section id="news">
+            <h1 class="title">NEWS</h1>
+            <div class="news">
+                <img src="marrige.jpeg" alt="news1">
+                <div class="top-left-text">In The News</div> <!-- New text box -->
+                <div class="intro">
+                    <h2>Marriage</h2>
+                    <p>Marriage is a social union or legal contract between people that creates kinship.</p>
+                </div>
+            </div>
+            <div class="news">
+                <img src="marrige.jpeg" alt="news1">
+                <div class="top-left-text">In The News</div> <!-- New text box -->
+                <div class="intro">
+                    <h2>Marriage</h2>
+                    <p>Marriage is a social union or legal contract between people that creates kinship. Marriage is a social union or legal contract between people that creates kinship. Marriage is a social union or legal contract between people that creates kinship.</p>
+                </div>
+            </div>
+            <div class="news">
+                <img src="marrige.jpeg" alt="news1">
+                <div class="top-left-text">In The News</div> <!-- New text box -->
+                <div class="intro">
+                    <h2>Marriage</h2>
+                    <p>Marriage is a social union or legal contract between people that creates kinship.</p>
+                </div>
+            </div>
+        </section>
+        <div class="impinfo">
+            <div class="address">
+                <h1>asaddresss</h1>
+            </div>
+            <div class="cnct">
+                <div class="contact-section">
+                    <div class="quick-connect">
+                        <h3>QUICK CONNECT</h3>
+                        <p class="phone">
+                        <span class="icon">📞</span> +91 80 4113 7995 / +91 80 2361 6683
+                        </p>
+                        <p class="whatsapp">
+                        <span class="icon">📱</span> +91 9113810495
+            </p>
+            <p class="email">
+                <span class="icon">✉</span> dna@dnanetworks.com
+            </p>
+        </div>
+        <button class="connect-with-us">CONTACT US<span>&#10230;</span></button> 
+    </div>
+               </div>
+            <div class="links">
+                <h1>asdkufyosd</h1>
+            </div>
+        </div>
+          
 </body>
 </html>
